--- a/src/assets/style/_common.scss
+++ b/src/assets/style/_common.scss
@@ -1,4 +1,5 @@
 
+@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow|Patrick+Hand');
 * {
     box-sizing: border-box;
     padding: 0;
@@ -9,9 +10,18 @@ body, html {
     height: 100%;
     font-size: 14px;
     background-color:  #ffffff;
-    font-family: sans-serif;
+    font-family: 'Patrick Hand', cursive;
+    // font-family: 'Archivo Narrow', sans-serif;
+}
+body {
+    position: relative;
 }
 
 li  a {
     font-size: 1.2em;
+}
+.container-fixed {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
 }
