--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -13,7 +13,7 @@
       text-transform: uppercase;
       font-size: 1.3em;
       border-radius: 50%;
-      border: 1px solid #777070;
+      border: 2px solid #000;
       display: inline-block;
       width: 28px;
       height: 28px;
@@ -30,12 +30,13 @@
       border: none;
       padding: 2px 8px;
       cursor: pointer;
+      background: transparent;
       &:focus {
         outline: none;
         border: none;
       }
       .toggle-icon {
-        color: #777070;
+        color: #000;
         font-size: 1.3em;
       }
     }
@@ -53,6 +54,103 @@
       display: table-cell;
       vertical-align: middle;
       text-align: center;
+      h5, h1, p {
+        font-family: 'Archivo Narrow', sans-serif;
+      }
+      h5 {
+        font-size: 1em;
+        letter-spacing: 2px;
+      }
+      h1 {
+        text-transform: uppercase;
+        font-size: 5em;
+        letter-spacing: 2px;
+      }
+      .year {
+        border: 1px solid #ddd;
+        padding: 1px 4px;
+      }
+      p {
+        margin-top: 1em;
+        color: #333;
+      }
+    }
+  }
+}
+#news {
+  background: #fff;
+  padding: 2em 0;
+  .news-container {
+    text-align: center;
+    display: table;
+    margin: 0 auto;
+    width: 100%;
+    .items {
+      display: table-cell;
+      width: 35%;
+      vertical-align: top;
+      .item {
+        margin: 0 10px 4em;
+        height: 350px;
+        border-top: 1px solid #eee; 
+      }
+      .horizontal-item {
+        .img-container{
+          width: 45%;
+          display: inline-block;
+          vertical-align: top;
+          .news-image {
+            width: 100%;
+            height: 350px;
+          }
+        }
+        .info-container {
+          width: 50%;
+          height: 100%;
+          display: inline-block;
+          margin-left: .8em;
+          padding-left: 1em;
+          border-left: 1px solid #eee; 
+          
+        }
+      }
+      .vertical-item {
+        .img-container {
+          width: 100%;
+          .news-image {
+            width: 100%;
+            height: 150px;
+            margin-bottom: 1em;
+          }
+        }
+      }
+      .full-item {
+        .img-container {
+          width: 100%;
+          height: 350px;
+          .news-image {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .info-container {
+          margin-top: 2rem;
+        }
+        
+      }
+      .info-container { 
+        .sub-title {
+          text-transform: uppercase;
+          font-family: inherit;
+        }
+        .main-title {}
+        .info-para {
+          text-align: justify;
+        }
+      }
+    }
+    .small-container  {
+      width : 23%;
     }
   }
 }
