--- a/src/assets/style/_common.scss
+++ b/src/assets/style/_common.scss
@@ -11,6 +11,7 @@ body, html {
     font-size: 14px;
     background-color:  #ffffff;
     font-family: 'Patrick Hand', cursive;
+    color : #000;
     // font-family: 'Archivo Narrow', sans-serif;
 }
 body {
