--- a/src/assets/style/_common.scss
+++ b/src/assets/style/_common.scss
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow|Patrick+Hand');
+@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow|Open+Sans+Condensed:300');
 * {
     box-sizing: border-box;
     padding: 0;
@@ -10,7 +10,7 @@ body, html {
     height: 100%;
     font-size: 14px;
     background-color:  #ffffff;
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Open Sans Condensed', sans-serif;
     color : #000;
     // font-family: 'Archivo Narrow', sans-serif;
 }
