--- a/src/assets/style/_common.scss
+++ b/src/assets/style/_common.scss
@@ -11,13 +11,19 @@ body, html {
     font-size: 14px;
     background-color:  #ffffff;
     font-family: 'Open Sans Condensed', sans-serif;
-    color : #000;
+    color : rgb(255, 250, 250);
     // font-family: 'Archivo Narrow', sans-serif;
 }
 body {
     position: relative;
 }
-
+ul {
+    margin: 0;
+    padding: 0;
+}
+ul li {
+    list-style: none;
+}
 li  a {
     font-size: 1.2em;
 }
@@ -26,3 +32,83 @@ li  a {
     max-width: 960px;
     margin: 0 auto;
 }
+.nav-background {
+    background-color: #000; 
+    position: relative;
+    z-index: 99999;
+    .logo {
+        border-color: #fff;
+    }
+    .logo, .brand-text, .toggle-icon {
+        color: #fff !important;
+    }
+
+}
+.logo {
+    color: #000 !important;
+    text-transform: uppercase;
+    font-size: 1.3em;
+    border-radius: 50%;
+    border: 2px solid #000;
+    display: inline-block;
+    width: 28px;
+    height: 28px;
+    font-family: 'Archivo Narrow', sans-serif;
+    text-align: center;
+    
+}
+.brand-text {
+    margin-left: 1em;
+    color: #000;
+}
+
+#columns {
+    column-width: 250px;
+    column-gap: 15px;
+    width: 90%;
+    max-width: 1100px;
+    margin: 50px auto;
+    figure {
+        background: #fefefe;
+        border: 2px solid #fcfcfc;
+        box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+        margin: 0 2px 15px;
+        padding: 15px;
+        padding-bottom: 10px;
+        transition: opacity .4s ease-in-out;
+        display: inline-block;
+        column-break-inside: avoid;
+    }
+    img {
+        width: 100%; height: auto;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 15px;
+        margin-bottom: 5px;
+      }
+      
+      figcaption {
+        font-size: .9em;
+        color: #444;
+        line-height: 1.5;
+        font-family: 'Archivo Narrow';
+      }
+      small { 
+        font-size: 1em;
+        float: right; 
+        text-transform: uppercase;
+        color: #aaa;
+        a { 
+            color: #666; 
+            text-decoration: none; 
+            transition: .4s color;
+          }
+      } 
+  }
+  #columns:hover figure:not(:hover) {
+    opacity: 0.4;
+  }
+  
+  @media screen and (max-width: 750px) { 
+    #columns { column-gap: 0px; }
+    #columns figure { width: 100%; }
+  }
