problem in saga

--- a/src/assets/style/_common.scss
+++ b/src/assets/style/_common.scss
@@ -27,6 +27,11 @@ ul li {
 li  a {
     font-size: 1.2em;
 }
+.main-body {
+    position: relative;
+}
+
+  
 .container-fixed {
     width: 100%;
     max-width: 960px;
