--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -1,9 +1,60 @@
 @import "./common";
+// menu modal 
+.menu-toogle-container {
+  position: absolute;
+  background: rgba(0, 0, 0,1);
+  width: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  .menu-container {
+    display: table;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    .lists {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+      .list {
+        margin: 1em 0;
+        .buttons {
+          font-family: 'Archivo Narrow';
+          font-size: 1.5em;
+          cursor: pointer;
+          &:hover, &:focus {
+            padding-bottom :10px;
+            border-bottom: 1px solid #fff;
+          }
+        }
+      }
+    }
+    .closeToggle {
+      background: transparent;
+      position: absolute;
+      top: 2em;
+      right: 4em;
+      cursor: pointer;
+      border: none;
+      &:focus, &:hover {
+        border: none;
+        outline: none;
+      }
+      .close-toggle-icon {
+        color: #fff;
+        font-size: 2em;
+      }
+    }
+  }
+  
+}
 
 #nav {
   padding: 1em 3em;
   position: fixed;
   width: 100%;
+  position: fixed;
   .brand-container, .nav-button-container{
     width: 50%;
     display: inline-block;
