--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -51,6 +51,7 @@
   
 }
 
+// Nav and footer
 #nav {
   padding: 1em 3em;
   position: fixed;
@@ -78,6 +79,42 @@
     }
   }
 }
+
+#footer {
+  background:#f9f7f7;
+  .footer-container {
+    display: table;
+    width: 100%;
+    padding: 1em 0;
+    .brand-container {
+      display: table-cell;
+      width: 50%;
+      vertical-align: middle;
+    }
+    .nav-button-container {
+      display: table-cell;
+      width: 50%;
+      vertical-align: middle;
+      text-align: right;
+      ul {
+        margin: 0;
+      }
+      ul li {
+        display: inline-block;
+        margin: 0 1em;
+        a {
+          color: #000;
+          &:hover {
+            border: none;
+          }
+        }
+      }
+    }
+  }
+  
+}
+
+// Home Page
 #info {
   height: 80vh;
   background: url('../img/bg.jpg') no-repeat;
@@ -92,6 +129,7 @@
       text-align: center;
       h5, h1, p {
         font-family: 'Archivo Narrow', sans-serif;
+        color: #000;
       }
       h5 {
         font-size: 1em;
@@ -183,38 +221,100 @@
   }
 }
 
-#footer {
-  background:#f9f7f7;
-  .footer-container {
-    display: table;
+
+// Login 
+
+#login {
+  
+  .form-container {
+    text-align: center;
     width: 100%;
-    padding: 1em 0;
-    .brand-container {
-      display: table-cell;
-      width: 50%;
-      vertical-align: middle;
+    height: 100vh;
+    overflow: hidden;
+    .brand-container, .login-form , .forget-pass-container {
+      margin: 2em 0;
     }
-    .nav-button-container {
-      display: table-cell;
-      width: 50%;
-      vertical-align: middle;
-      text-align: right;
-      ul {
-        margin: 0;
-      }
-      ul li {
-        display: inline-block;
-        margin: 0 1em;
-        a {
+    .brand-container {
+      display: table;
+      width: 100%;
+      margin-top: 5em;
+      .logo-container {
+        text-align: right;
+        display: table-cell;
+        vertical-align: middle;
+        width: 40%;
+          .logo {
+            font-size: 3em;
+            height: 50px;
+            width: 50px;
+            border-radius: 50%;
+            border: 2px solid #000;
+            line-height: 1.2em;
+            margin-left: 1em;
+            cursor: pointer;
+          } 
+        }
+        .brand-text {
+          padding-left: 2em;
+          font-size: 1.3em;
+          display: table-cell;
+          vertical-align: middle;
+          width: 60%;
+          text-align: left;
+        } 
+    }
+    .login-form {
+      text-align: center;
+      .input-container {
+        width: 40%;
+        text-align: center;
+        margin: 1em auto;
+        .label, .input  {
+          display: block;
+          width: 100%;
+          text-align: left;
+        }
+        .label {
+          margin: .8em 0;
+          font-size: 1.2em;
+          font-weight: 600;
+        }
+        .input {
+          padding: .7em 0;
           color: #000;
-          &:hover {
-            border: none;
-          }
+          padding-left: 1em;
+        }        
+      }
+      .submit-remember {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        .submit-container {
+          display: inline-block;
+        }
+        .checkmark {
+          font-size: 1.2em;
+          font-weight: 600;
+          margin-left: 10px;
+         }  
+        .submit-button {
+          padding: .3em 1em;
+          background: #000;
+          color: #fff;
+          border-radius: 4px;
+          cursor: pointer;
         }
       }
     }
+    .forget-pass-container {
+      a {
+        display: block;
+        margin: 1em 0;
+        font-size: 1.2em;
+      }
+    }
   }
-  
 }
 
 
