--- a/src/assets/style/_common.scss
+++ b/src/assets/style/_common.scss
@@ -27,6 +27,9 @@ ul li {
 li  a {
     font-size: 1.2em;
 }
+a {
+    cursor: pointer;
+}
 .main-body {
     position: relative;
 }
@@ -112,7 +115,103 @@ li  a {
   #columns:hover figure:not(:hover) {
     opacity: 0.4;
   }
-  
+// Auth
+  .Auth {
+    .form-container {
+      text-align: center;
+      width: 100%;
+      height: 100vh;
+      .brand-container, .login-form , .forget-pass-container {
+        margin: 2em 0;
+      }
+      .brand-container {
+        display: table;
+        width: 100%;
+        margin-top: 5em;
+        .logo-container {
+          text-align: right;
+          display: table-cell;
+          vertical-align: middle;
+          width: 40%;
+            .logo {
+              font-size: 3em;
+              height: 50px;
+              width: 50px;
+              border-radius: 50%;
+              border: 2px solid #000;
+              line-height: 1.2em;
+              margin-left: 1em;
+              cursor: pointer;
+            } 
+          }
+          .brand-text {
+            padding-left: 2em;
+            font-size: 1.3em;
+            display: table-cell;
+            vertical-align: middle;
+            width: 60%;
+            text-align: left;
+          } 
+      }
+      .login-form {
+        text-align: center;
+        .input-container {
+          width: 40%;
+          text-align: center;
+          margin: 1em auto;
+          .label, .input  {
+            display: block;
+            width: 100%;
+            text-align: left;
+          }
+          .label {
+            margin: .8em 0;
+            font-size: 1.2em;
+            font-weight: 600;
+          }
+          .input {
+            padding: .7em 0;
+            color: #000;
+            padding-left: 1em;
+            &:focus {
+              outline: #000;
+            }
+          }        
+        }
+        .submit-remember {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          flex-direction: row;
+          .submit-container {
+            display: inline-block;
+          }
+          .checkmark {
+            font-size: 1.2em;
+            font-weight: 600;
+            margin-left: 10px;
+           }  
+          .submit-button {
+            padding: .3em 1em;
+            background: #000;
+            color: #fff;
+            border-radius: 4px;
+            cursor: g;
+          }
+        }
+      }
+      .forget-pass-container {
+        a {
+          display: block;
+          margin: 1em 0;
+          font-size: 1.2em;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+
   @media screen and (max-width: 750px) { 
     #columns { column-gap: 0px; }
     #columns figure { width: 100%; }
