--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -2,11 +2,10 @@
 // menu modal
 .menu-toogle-container {
   position: absolute;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 1);
   width: 100%;
   top: 0;
   left: 0;
-  bottom: 0;
   overflow: hidden;
   z-index: 99999;
   .menu-container {
@@ -37,7 +36,7 @@
       background: transparent;
       position: absolute;
       top: 2em;
-      right: 4em;
+      right: 10em;
       cursor: pointer;
       border: none;
       &:focus,
@@ -302,6 +301,66 @@
     }
     .paragrapg {
       margin: 3em;
+    }
+  }
+}
+
+// contact
+
+#contact {
+  height: 100%;
+  .auto-vertical {
+    display: table;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
+    .contact-container {
+      display: table-cell;
+      vertical-align: middle;
+      margin: 0 auto;
+      text-align: center;
+      .title {
+        font-size: 4em;
+      }
+      .sub-title {
+        font-size: 1.4em;
+      }
+      .form {
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 3em;
+
+        .input-container {
+          margin-bottom: 2em;
+          .input {
+            width: 100%;
+            padding: 0.7em 1em;
+            border-radius: 4px;
+
+            border: 2px solid #aba6a6;
+          }
+          .message {
+            width: 100%;
+            border-radius: 4px;
+            border: 2px solid #aba6a6;
+            padding: 0.7em 1em;
+          }
+        }
+        .send-button {
+          width: 100%;
+          padding: 0.7em 1em;
+          border: 2px solid #000;
+          border-radius: 7px;
+          color: #fff;
+          background: #000;
+          transition: 0.3s;
+          font-size: 1.1em;
+          &:hover {
+            color: #000;
+            background: #fff;
+          }
+        }
+      }
     }
   }
 }
