--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -364,3 +364,74 @@
     }
   }
 }
+
+#response-container {
+  background: #fafafa;
+  .container-fixed {
+    padding: 0 10%;
+  }
+}
+.comment-container {
+  .comment-form {
+    margin-bottom: 5em;
+    .input-container {
+      position: relative;
+      label {
+        display: block;
+        font-size: 1.2em;
+        font-weight: 600;
+        margin-bottom: 1em;
+        color: #595959;
+      }
+      textarea {
+        width: 100%;
+        background: #fff;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.03);
+        border: 1px solid rgba(0, 0, 0, 0.09);
+        border-radius: 3px;
+        outline: none;
+        padding: 1em 3em;
+        height: 100px;
+        color: #595959;
+        transition: 0.3s;
+        &:focus {
+          min-height: 200px;
+        }
+      }
+      .outline-button {
+        padding: 0.4em 2em;
+        background: #fff;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.03);
+        border: 1px solid #000;
+        border-radius: 3px;
+        cursor: pointer;
+        position: absolute;
+        left: 1.5em;
+        bottom: 1.5em;
+      }
+    }
+  }
+  .response-list-container {
+    .list {
+      background: #fff;
+      margin-bottom: 20px;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.03);
+      border: 1px solid rgba(0, 0, 0, 0.09);
+      padding: 1em 0.7em;
+
+      .responses {
+        .info {
+          display: flex;
+          align-items: center;
+          img {
+            border-radius: 50%;
+            margin-right: 1em;
+          }
+        }
+        .desc {
+          margin-top: 1em;
+        }
+      }
+    }
+  }
+}
