--- a/src/assets/style/_common.scss
+++ b/src/assets/style/_common.scss
@@ -49,6 +49,13 @@ a {
     text-decoration: none;
   }
 }
+// .switch-wrapper {
+//   position: relative;
+// }
+
+// .switch-wrapper > div {
+//   position: absolute;
+// }
 .main-body {
   position: relative;
 }
